[gd_scene load_steps=5 format=3 uid="uid://b2q6ukmxhtqpm"]

[ext_resource type="Script" uid="uid://cc6aphstivs7" path="res://scripts/world.gd" id="1_4wyf3"]
[ext_resource type="PackedScene" uid="uid://drh7qg2cqghhi" path="res://scenes/level.tscn" id="2_bm6ah"]
[ext_resource type="PackedScene" uid="uid://6eycfawxusj7" path="res://scenes/player.tscn" id="2_lol6h"]
[ext_resource type="PackedScene" uid="uid://bv5sph0t2khjp" path="res://scenes/collectible.tscn" id="4_k0juu"]

[node name="World" type="Node"]
script = ExtResource("1_4wyf3")

[node name="CanvasModulate" type="CanvasModulate" parent="."]
position = Vector2(0, -1)
color = Color(0.0588235, 0.0588235, 0.0588235, 0.886275)

[node name="Level" parent="." instance=ExtResource("2_bm6ah")]

[node name="Player" parent="." instance=ExtResource("2_lol6h")]
position = Vector2(2, 45)

[node name="Camera2D" type="Camera2D" parent="Player"]
position = Vector2(6, -6)
zoom = Vector2(10, 10)
position_smoothing_speed = 10.0

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="GameTimer" type="Timer" parent="CanvasLayer"]
wait_time = 0.01
autostart = true

[node name="TimerLabel" type="Label" parent="CanvasLayer"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -128.0
offset_bottom = 71.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 50
text = "00:00"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CollectedCoinsLabel" type="Label" parent="CanvasLayer"]
offset_left = 74.0
offset_right = 179.0
offset_bottom = 69.0
theme_override_font_sizes/font_size = 50

[node name="Collectible" parent="CanvasLayer" instance=ExtResource("4_k0juu")]
position = Vector2(40, 36)
scale = Vector2(5, 5)
monitoring = false
monitorable = false

[connection signal="collectible_collected" from="Player" to="." method="_on_player_collectible_collected"]
[connection signal="ready" from="Player/Camera2D" to="Level" method="_on_camera_2d_ready"]
[connection signal="timeout" from="CanvasLayer/GameTimer" to="." method="_on_game_timer_timeout"]
